<resources>
    <string name="app_name">AJAX</string>
    <string name="app_name2">Desarrollador</string>
    <string name="informacion">Desarrollador \n
        \n
        María del Carmen Gómez Castañeda\n
        19 Años\n
        Universidad Tecnologica del Norte de Guanajuato\n
        T.S.U Sistemas Informáticos\n
        Dolores Hidalgo C.I.N Gto.\n
        \n
        Proyecto: Desarrollo de Aplicaciones III\n
        Profesor Encargado: Anastacio Rodríguez Garcia</string>
    <string name="inf_princ">\n AJAX, acrónimo de Asynchronous JavaScript And XML (JavaScript asíncrono y XML), es una técnica de desarrollo web para crear aplicaciones interactivas o RIA (Rich Internet Applications).</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="modulo">
        <item> AJAX - XMLHttp </item>
        <item> AJAX - Solicitar </item>
        <item> AJAX - Respuesta </item>
        <item> AJAX - Eventos </item>
        <item> AJAX - PHP </item>
        <item> QUIZ DE CERTIFICACIÓN </item>
    </string-array>
    <string-array name="modulo1">
        <item>Introducción</item>
        <item>Historia</item>
        <item>Evolución de la Interfaz</item>
        <item>Implementación y uso de la Interfaz</item>
        <item>Identificación del Juego de Caracteres</item>
        <item>Instalación del Objeto</item>
        <item>Navegadores que permiten AJAX</item>
        <item>Quiz del Módulo</item> 
    </string-array>
    <string-array name="modulo1_contenido">
        <item>Es una interfaz empleada para realizar peticiones HTTP y HTTPS a servidores Web...</item>
        <item>La primera versión de la interfaz XMLHttpRequest fue desarrollada por Microsoft...</item>
        <item>El 26 de febrero de 2008 se publicó la primera versión de la especificación XMLHttpRequest Level 2...</item>
        <item>XMLHttpRequest es una interfaz para realizar llamadas mediante HTTP, por lo que es recomendable...</item>
        <item>Otro elemento importante en la especificación, es el manejo de juegos de caracteres u hojas de códigos...</item>
        <item>A continuación se muestra un posible código JavaScript que permite crear el objeto teniendo...</item>
        <item>Ha de tenerse en cuenta que ésta es una lista general, y el soporte de las aplicaciones Ajax...</item>
        <item>Realización del quiz...</item>
    </string-array>
    <string-array name="modulo1_contenido_completo">
        <item>Es una interfaz empleada para realizar peticiones HTTP y HTTPS a servidores Web. Para los datos transferidos se usa cualquier codificación basada en texto, incluyendo: texto plano, XML, JSON, HTML y codificaciones particulares específicas. La interfaz se implementa como una clase de la que una aplicación cliente puede generar tantas instancias como necesite para manejar el diálogo con el servidor. El uso más popular, si bien no el único, de esta interfaz es proporcionar contenido dinámico y actualizaciones asíncronas en páginas WEB mediante tecnologías construidas sobre ella como por ejemplo AJAX</item>
        <item>La primera versión de la interfaz XMLHttpRequest fue desarrollada por Microsoft que la introdujo en la versión 5.0 de Internet Explorer.1 Esta primera versión se publicó utilizando un objeto ActiveX, lo que significa que podía ser utilizada desde cualquier entorno de desarrollo de software con soporte para esta tecnología, es decir, la práctica totalidad de plataformas generalistas de desarrollo para Microsoft Windows. Microsoft ha seguido manteniendo y actualizando esta tecnología incluyendo la funcionalidad dentro del Microsoft XML Parser MSXML en sus sucesivas versiones. A partir de la versión 7 de Internet Explorer la interfaz se ofrece de manera integrada.1 Al ser integrada, el acceso a la interfaz se realiza enteramente con objetos JScript o VBScript proporcionados por el navegador y no mediante bibliotecas externas. El proyecto Mozilla incorporó la primera implementación integrada de XMLHttpRequest en la versión 1.0 de la Suite Mozilla en 2002. Esta implementación sería seguida por Apple a partir de Safari 1.2, Konqueror, Opera Software a partir del Opera 8.0 e iCab desde la versión 3.0 El World Wide Web Consortium presentó el 27 de septiembre de 2006 el primer borrador de una especificación estándar de la interfaz.2 La versión actual de 17 de enero de 2012, denominada XMLHttpRequest Level 2 es el resultado de varias revisiones.3 Mientras no se alcance una versión definitiva, los desarrolladores de aplicaciones WEB deberán tener en cuenta las diferencias entre implementaciones o bien utilizar paquetes o frameworks que realicen esta función</item>
        <item>El 26 de febrero de 2008 se publicó la primera versión de la especificación XMLHttpRequest Level 2. Esta nueva especificación, que se inicia antes de haber publicado la versión definitiva de la interfaz, pretende añadir nuevas funciones como: peticiones entre dominios cross-site, eventos de progreso y manejo de flujos de bytes streams tanto para el envío como para la recepción.</item>
        <item>XMLHttpRequest es una interfaz para realizar llamadas mediante HTTP, por lo que es recomendable un buen conocimiento de este protocolo. Es importante el manejo correcto de la cache en el servidor HTTP, en los proxy cache intermedios y en el navegador WEB. La interfaz se implementa en una clase de la que se debe crear una nueva instancia mediante el constructor adecuado. Es posible realizar peticiones síncronas y asíncronas al servidor. Cuando las operaciones son síncronas la ejecución del programa se detiene hasta que se completa la operación. En una llamada asíncrona el flujo de proceso no se detiene a esperar la respuesta sino que esta continúa en segundo plano y se define un manejador de evento que se ejecutará cuando se complete la petición.</item>
        <item>Otro elemento importante en la especificación, es el manejo de juegos de caracteres u hojas de códigos. La codificación y decodificación de texto y la identificación de los juegos de caracteres mediante cabeceras HTTP y tipos MIME. El estándar XMLHttpRequest recomienda UTF-8 para la codificación de cadenas de texto.3\n
                                \n
                                Para determinar la codificación de los datos transmitidos se usa el siguiente algoritmo, utilizando la primera opción que se cumpla:\n
                                \n
                                Si los datos transmitidos son XML o HTML, y así se identifica mediante la correspondiente cabecera Content-Type de HTTP, la codificación se detectará siguiendo las reglas de XML o HTML según corresponda.\n
                                Si la cabecera HTTP especifica un tipo MIME mediante Content-Type e identifica un juego de caracteres se utiliza dicho juego de caracteres.\n
                                Si los datos enviados especifican un BOM válido, se utilizará la variante UTF determinada por dicho BOM.\n
                                Utilizar UTF-8.\n
                                Si no se identifica correctamente la codificación, existe el riesgo de que en un sistema en el que se mezclen varias codificaciones puedan producirse errores de visualización de caracteres. Por ejemplo al incorporar funcionalidad AJAX, que por defecto utiliza UTF-8, a una página WEB codificada con ISO 8859-1.
                        </item>
        <item>A continuación se muestra un posible código JavaScript que permite crear el objeto teniendo en cuenta las diferencias entre los navegadores más populares.
                                \n
                                var httpRequest;\n
                                if window.XMLHttpRequest\n
                                {\n
                                //El explorador implementa la interfaz de forma nativa\n
                                httpRequest = new XMLHttpRequest;\n
                                } \n
                                else if window.ActiveXObject\n
                                {\n
                                //El explorador permite crear objetos ActiveX\n
                                try {\n
                                httpRequest = new ActiveXObject\"MSXML2.XMLHTTP\";\n
                                } catch e {\n
                                try {\n
                                httpRequest = new ActiveXObject\"Microsoft.XMLHTTP\";\n
                                } catch e {}\n
                                }\n
                                }\n
                                if !httpRequest\n
                                {\n
                                alert\"No ha sido posible crear una instancia de XMLHttpRequest\";\n
                                }</item>
        <item>Ha de tenerse en cuenta que ésta es una lista general, y el soporte de las aplicaciones Ajax dependerá de las características que el navegador permita.\n
                                \n
                                Navegadores basados en Gecko como Mozilla, Mozilla Firefox, SeaMonkey, Camino, K-Meleon, IceWeasel, Flock, Epiphany, Galeon y Netscape versión 7.1 y superiores\n
                                Navegadores basados en WebKit como Google Chrome de Google o Safari de Apple.\n
                                Microsoft Internet Explorer para Windows versión 5.0 y superiores, y los navegadores basados en él\n
                                Navegadores con el API KHTML versión 3.2 y superiores implementado, incluyendo Konqueror versión 3.2 y superiores y el Web Browser for S60 de Nokia tercera generación y posteriores\n
                                Opera versión 8.0 y superiores, incluyendo Opera Mobile Browser versión 8.0 y superiores.
                        </item>
        <item>Refuerza tus conocimientos!!! </item>
    </string-array>
    <string-array name="modulo2">
        <item>Inicia y Procesa una petición</item>
        <item>Orden de Activación</item>
        <item>Portatibilidad</item>
        <item>Quiz del Módulo</item>
    </string-array>
    <string-array name="modulo1_geo">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="modulo2_contenido">
        <item>Ajax.Request es una clase de propósito general para realizar peticiones HTTP...</item>
        <item>onCreate esto es en realidad una devolución de llamada reservada a Ajax.Responders ...</item>
        <item>Dependiendo de cómo el navegador implementa XMLHttpRequest , uno o más devoluciones de...</item>
        <item>Realización del quiz...</item>
    </string-array>
    <string name="btn_video">Ver Video</string>
    <string name="btn_audio">Reproducir Audio</string>
    <string name="play">Jugar</string>
    <string name="conf">Configuración</string>
    <string name="acerca">Acerca De</string>
    <string name="logros">Logros</string>
    <string name="ranking">Puntuaciones</string>
    <string name="txt_introduce">Introduce una palabra:</string>
    <string name="btn_send">Enviar</string>
    <string name="help1">Ayuda 1:</string>
    <string name="help2">Ayuda 2:</string>
    <string name="txt_secreta">Palabra secreta:</string>
    <string name="intentos">Intentos:</string>
    <string name="tit">Palabra Secreta</string>
    <string name="txt_help1">aaa</string>
    <string name="txt_help2">zzz</string>
</resources>