<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <EditText
        android:id="@+id/palabraIntroducida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pmayor"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textShortMessage"
        android:hint="@string/txt_introduce">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/palabraIntroducida"
        android:background="@drawable/btn_rojo"
        android:onClick="comprobarPalabra"
        android:text="@string/btn_send" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/psecreta"
        android:layout_marginTop="22dp"
        android:text="@string/help2"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pmenor"
        android:layout_marginTop="26dp"
        android:text="@string/txt_secreta"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/intentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"
        android:text="@string/intentos"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/intentos"
        android:layout_marginTop="29dp"
        android:text="@string/help1"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/tit"
        android:src="@drawable/titland" />

    <TextView
        android:id="@+id/pmenor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginRight="15dp"
        android:text="@string/txt_help1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/psecreta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignRight="@+id/pmenor"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/pmayor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/psecreta"
        android:layout_alignTop="@+id/TextView01"
        android:text="@string/txt_help2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

</RelativeLayout>