<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fffbfff9">

    <LinearLayout
        android:id="@+id/linearMaps"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:visibility="gone"
        android:animateLayoutChanges="true"
        android:layout_below="@+id/linearlayout_localizacion"
        android:layout_height="wrap_content">

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:id="@+id/iv_imagen_listarunmodulo"
                android:src="@drawable/ajax1"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Introducción"
                    android:id="@+id/tv_titulo_listarunmodulo"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="#ff000000"
                    android:visibility="visible"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/inf_princ"
                android:id="@+id/tv_contenido_listarunmodulo"
                android:layout_margin="5dp"
                android:textColor="#ff868686" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_video"
                android:layout_gravity="center"
                android:textColor="@color/letras"
                android:background="@drawable/f1"
                android:id="@+id/btn_video"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_audio"
                android:layout_gravity="center"
                android:background="@drawable/f1"
                android:textColor="@color/letras"
                android:id="@+id/btn_audio"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>